# dynamic-pricing

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  streamlit_app.py
examples/configs/: example_config.yaml
examples/data/: sample_market_data.csv
src/dynamic_pricing/: __init__.py  cli.py  competitors.py  config.py  data_sources.py  engine.py  env.py  pricing.py  signals.py
tests/: test_competitors.py  test_engine.py
